# dunossauro-fast-zero

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 38187cf10857_create_users_table.py  6b2b97526208_create_users_table.py  816a593df410_alter_table_users_add_column_update_at.py  8cceb07d9aaf_update_todo_table_add_columns_created_.py  a56dcebac232_fix_update_at_column.py  c1a3f3698e93_create_update_at_column_in_users_table.py  d1cd09b2a50c_create_todos_table.py  ee9ab75d2d89_create_users_table.py  f7c001d891ec_create_update_at_column_in_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
zero/: app.py  database.py  models.py  schemas.py  security.py
zero/routers/: auth.py  todos.py  users.py
